Rename lib/config.js to lib/util.js and merge ejs-util

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -25,7 +25,7 @@
 <% var l = locals %>
 
 <% include header1.ejs %>
-<title>Slot <%= l.slot %> - <%= l.config.branding %> FATE</title>
+<title>Slot <%= l.slot %> - <%= l.util.branding %> FATE</title>
 <% include header2.ejs %>
 Report history for <%= l.slot %>
 <% include header3.ejs %>
