--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,9 @@
 <% var l = locals %>
 
 <% include header1.ejs %>
-<title><%= l.config.branding %> FATE</title>
+<title><%= l.util.branding %> FATE</title>
 <% include header2.ejs %>
-<%= l.config.branding %> FATE
+<%= l.util.branding %> FATE
 <% include header3.ejs %>
 
 <p>
