--- a/views/replist.ejs
+++ b/views/replist.ejs
@@ -93,7 +93,7 @@
         </td>
       <% } else if (prop === 'rev') { %>
         <td>
-          <%- l.config.linkGitHist(rep.rev) %>
+          <%- l.util.linkGitHist(rep.rev) %>
         </td>
       <% } else if (prop === 'results') { %>
         <td class="<%- rep.rclass %>"
