more style improvmenet

--- a/views/header2.ejs
+++ b/views/header2.ejs
@@ -2,10 +2,7 @@
     <link rel="stylesheet" href="https://ffmpeg.org/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://ffmpeg.org/css/simple-sidebar.css" />
     <link rel="stylesheet" href="https://ffmpeg.org/css/style.min.css" />
-    <!--
-    <link rel="stylesheet" href="/css/style.min.css" />
-    -->
-    <link rel="stylesheet" href="/css/fate.css" />
+    <link rel="stylesheet" href="/css/fate.min.css" />
     <link rel="stylesheet" href="/css/footable.core.min.css" />
     <link rel="stylesheet" href="/css/footable.custom.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
