--- a/views/error.ejs
+++ b/views/error.ejs
@@ -20,13 +20,13 @@
  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
- */%>
+ */-%>
 
 Error <%= locals.status %>:
 
 <pre>
-<% if (locals.error) { %>
+<% if (locals.error) { -%>
   <%= locals.error.stack %>
-<% } else { %>
-  <%= locals.message %>
-<% } %></pre>
+<% } else { -%>
+  <%= locals.message -%>
+<% } -%></pre>
