--- a/views/history.ejs
+++ b/views/history.ejs
@@ -51,7 +51,7 @@ Report history for <%= l.slot %>
 <div class="hidden-xs table-responsive">
   <table class="table" id="config">
     <thead>
-      <tr><th colspan="2">Information of the Last Run</th></tr>
+      <tr><th colspan="2">Last Run Information</th></tr>
     </thead>
     <tbody>
       <% for (var i = 0; i < info.length; i ++ ) { %>
