Optimize warning number showing

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -90,7 +90,7 @@ Report history for <%= l.slot %>
     <% var propsToDisplay = ['date', 'rev', 'nwarn', 'results']
          , hide = {
              rev  : 'xs,phone'
-           , nwarn: 'xs,phone,sm'
+           , nwarn: 'xs,phone'
            } -%>
     <% include replist.ejs -%>
   </table>
