--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -12,7 +12,7 @@
         $("#wrapper").toggleClass("active")
       })
     </script>
-    <script src="/js/footable.min.js"></script>
+    <script src="/js/footable.js"></script>
     <script src="/js/footable.sort.min.js"></script>
     <script>
       $('.footable').footable({
