do not wrap heading row

--- a/fate.less
+++ b/fate.less
@@ -44,6 +44,10 @@
     color: black;
 }
 
+.table th {
+  white-space: nowrap;
+}
+
 .table > thead > tr,
 .table > tbody > tr,
 .table > tfoot > tr {
