Implement revision compariosn

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -91,7 +91,8 @@ Report history for <%= l.slot %>
          , hide = {
              rev  : 'xs,phone'
            , nwarn: 'xs,phone'
-           } -%>
+           }
+         , compareWithPrev = false -%>
     <% include replist.ejs -%>
   </table>
 </div>
