--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,8 @@
                   , cc     : 'xs,phone'
                   , rev    : 'xs,phone,sm'
                   , subarch: 'xs'
-                  } -%>
+                  }
+         , compareWithPrev = true -%>
     <% include replist.ejs -%>
   </table>
 </div>
