Fix stdout and diff preformatted blocks width
After 3 (!!) years!!!

--- a/fate.less
+++ b/fate.less
@@ -201,6 +201,11 @@ pre {
     white-space: pre;
 }
 
+pre[class*="language-"] {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 /* Button style */
 .btn-fail {
     color: #fff;
