--- a/views/report.ejs
+++ b/views/report.ejs
@@ -83,7 +83,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
 </ul>
 
 <div class="tab-content">
-<div role="tabpanel" class="tab-pane fade in active" id="info">
+<div role="tabpanel" class="tab-pane in active" id="info">
   <div class="table-responsive">
     <table id="config" class="replist table">
       <thead>
@@ -168,7 +168,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
 </div>
 
 <% if (l.summary.status === 1) { -%>
-<div role="tabpanel" class="tab-pane fade" id="failed_tests">
+<div role="tabpanel" class="tab-pane" id="failed_tests">
   <div class="table-responsive">
     <table class="replist table" id="tests">
       <thead>
@@ -237,7 +237,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
 <% } -%>
 
 <% if (l.summary.npass > 0) { -%>
-<div role="tabpanel" class="tab-pane fade" id="passed_tests">
+<div role="tabpanel" class="tab-pane" id="passed_tests">
   <% var allPassed = l.report.filter(function (value) {
        return value.status === 0
      })
