history: do not add style classes

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -92,6 +92,7 @@ Report history for <%= l.slot %>
              rev  : 'xs,phone'
            , nwarn: 'xs,phone'
            }
+         , ignoreTimestamp = true
          , compareWithPrev = false -%>
     <% include replist.ejs -%>
   </table>
