--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,6 +64,7 @@
                   , rev    : 'xs,phone,sm'
                   , subarch: 'xs'
                   }
+         , ignoreTimestamp = false
          , compareWithPrev = true -%>
     <% include replist.ejs -%>
   </table>
