--- a/public/css/prism.css
+++ b/public/css/prism.css
@@ -157,4 +157,4 @@ pre.line-numbers > code {
             display: block;
             padding-right: 0.8em;
             text-align: right;
-        
+        } 
