Get report to validate

--- a/views/header2.ejs
+++ b/views/header2.ejs
@@ -12,6 +12,7 @@
     <![endif]-->
 
     <link rel="shortcut icon" href="https://ffmpeg.org/favicon.ico" />
+    <script src="https://ffmpeg.org/js/jquery.min.js"></script>
   </head>
   <body>
 
