--- a/views/report.ejs
+++ b/views/report.ejs
@@ -175,7 +175,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
     <table class="replist table" id="tests">
       <thead>
         <tr>
-          <th colspan>Name</th>
+          <th>Name</th>
           <th>Status</th>
           <th>Last Good Rev</th>
         </tr>
@@ -207,25 +207,25 @@ Report of <%= l.slot %> <%= l.summary.rev %>
                 <%= rep.name %>
               </span>
               <span class="pull-right">
-                <div class="btn btn-success btn-xs"
+                <span class="btn btn-success btn-xs"
                      id="<%= rep.name + '-diff-btn' %>"
                      onclick="show_diff('<%= rep.name %>')">
                   diff
-                </div>
-                <div class="btn btn-success btn-xs"
+                </span>
+                <span class="btn btn-success btn-xs"
                      id="<%= rep.name + '-stderr-btn' %>"
                      onclick="show_err('<%= rep.name %>')">
                   stderr
-                </div>
+                </span>
               </span>
             </td>
             <td class="errcode"><%= rep.status %></td>
             <td><%- lastpass %></td>
           </tr>
-          <tr class="toggled" id="<%= rep.name %>-diff"><td colspan="5">
+          <tr class="toggled" id="<%= rep.name %>-diff"><td colspan="3">
             <pre class="line-numbers"><code class="language-git">Loading...</code></pre>
           </td></tr>
-          <tr class="toggled" id="<%= rep.name %>-stderr"><td colspan="5">
+          <tr class="toggled" id="<%= rep.name %>-stderr"><td colspan="3">
             <!-- Even though it is not a diff, language-git is still needed
                  somehow for line numbers. -->
             <pre class="line-numbers"><code class="language-git">Loading...</code></pre>
@@ -253,10 +253,10 @@ Report of <%= l.slot %> <%= l.summary.rev %>
 
 </div>
 
-<% include footer.ejs %>
 <script>
   var slot = '<%- l.slot.replace("'", "\\'") %>'
   var date = <%- l.summary.date %>
 </script>
 <script src="/js/report.min.js"></script>
 <script src="/js/prism.min.js"></script>
+<% include footer.ejs %>
