--- a/less/fate.less
+++ b/less/fate.less
@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2011 Mans Rullgard <mans@mansr.com>
- * Copyright (c) 2014 Tiancheng "Timothy" Gu <timothygu99@gmail.com>
+ * Copyright (c) 2014-2015 Tiancheng "Timothy" Gu <timothygu99@gmail.com>
  *
  * Permission to use, copy, modify, and distribute this software for any
  * purpose with or without fee is hereby granted, provided that the above
