--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <%#
  % Error page.
  %
- % Copyright (c) 2014 Tiancheng "Timothy" Gu <timothygu99@gmail.com>
+ % Copyright (c) 2014-2015 Tiancheng "Timothy" Gu <timothygu99@gmail.com>
  %
  % Permission is hereby granted, free of charge, to any person obtaining a copy
  % of this software and associated documentation files (the "Software"), to deal
