Overhaul error handling

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -33,6 +33,7 @@ Error <%= locals.status %>
   <%= locals.error.stack %>
 <% } else { -%>
   <%= locals.message -%>
-<% } -%></pre>
+<% } -%>
+</pre>
 
 <% include footer.ejs -%>
