Use a fainter yellow
Suggested-by: llogan

--- a/less/fate.less
+++ b/less/fate.less
@@ -17,7 +17,7 @@
 
 @Cpass:   #5cb85c;
 @Cfail:   #d9534f;
-@Cwarn:   #ffeb3b;
+@Cwarn:   #ffee70;
 
 @Cinvert: hsl(0, 0%, 90%);
 @Cmain:                 hsl(0, 0%,    19%);
