Remove useless copyright notices

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -12,7 +12,7 @@
       })
     </script>
     <script src="/js/footable.min.js"></script>
-    <script src="/js/footable.sort.min.js"></script>
+    <script src="/js/footable.sort.js"></script>
     <script>
       $(function () {
         $('.footable').footable({
