--- a/less/fate.less
+++ b/less/fate.less
@@ -19,7 +19,7 @@
 @Cfail:   #d9534f;
 @Cwarn:   #ffee70;
 
-@Cinvert: hsl(0, 0%, 90%);
+@Cinvert:               hsl(0, 0%,    90%);
 @Cmain:                 hsl(0, 0%,    19%);
 @Cmaindark:          darken(@Cmain,    5%);
 @Cmaindarkdark:      darken(@Cmain,   10%);
@@ -191,6 +191,7 @@ table.minirep {
 
 #passed_tests span {
     padding: 0.25em;
+    word-break: break-word;
 }
 
 code {
