More harmonious tab styles

--- a/less/fate.less
+++ b/less/fate.less
@@ -244,7 +244,7 @@ a.btn-default {
 .nav-tabs > li {
   & > a {
     & {
-      color: #c9c9c9;
+      color: @Cinvert;
     }
     &:hover,
     &:focus {
