--- a/views/replist.ejs
+++ b/views/replist.ejs
@@ -70,12 +70,12 @@
   <% if (prevRep) {
        var passedMoreThanFailed = rep.npass > rep.nfail
        if (prevRep.status > rep.status
-        || passedMoreThanFailed ? prevRep.nfail > rep.nfail
-                                : prevRep.npass < rep.npass) {
+       || (passedMoreThanFailed ? prevRep.nfail > rep.nfail
+                                : prevRep.npass < rep.npass)) {
          repClass += ' pass'
        } else if (prevRep.status < rep.status
-               || passedMoreThanFailed ? prevRep.nfail < rep.nfail
-                                       : prevRep.npass > rep.npass) {
+              || (passedMoreThanFailed ? prevRep.nfail < rep.nfail
+                                       : prevRep.npass > rep.npass)) {
          repClass += ' warn'
        }
      } -%>
